--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- authors and affiliations -->
     <section class="authors_block">
         <div class="authors" align="center">
-            <span class="author-block"><a href="https://www.linkedin.com/in/etai-sella-1792b2154/" target="_blank">Etai Sella</a><sup>*</sup>,</span>
+            <span class="author-block"><a href="https://etaisella.github.io/" target="_blank">Etai Sella</a><sup>*</sup>,</span>
             <span class="author-block"><a href="https://www.linkedin.com/in/gal-fiebelman-b923031b4/" target="_blank">Gal Fiebelman</a><sup>*</sup>,</span>
             <span class="author-block"><a href="https://www.linkedin.com/in/noam-atia" target="_blank">Noam Atia</a>,</span>
             <span class="author-block"><a href="https://www.elor.sites.tau.ac.il/" target="_blank">Hadar Averbuch-Elor</a></span>
