--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <span class="icon">
                         <i class="fa fa-github"></i>
                     </span>
-                    <span>Code - soon!</span>
+                    <span>Code</span>
                   </button>
             </a>
           </span>
