--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <meta property="og:site_name" content="SPiC&middot;E" />
+    <meta property="og:site_name" content="Spice&middot;E" />
     <meta property="og:type" content="video.other" />
-    <meta property="og:title" content="SPiC&middot;E: Structural Priors in 3D Diffusion Models using Cross-Entity Attention" />
+    <meta property="og:title" content="Spice&middot;E: Structural Priors in 3D Diffusion using Cross-Entity Attention" />
     <meta property="og:description" content="" />
-    <meta property="og:url" content="https://tau-vailab.github.io/spic-e/" />
-    <meta property="og:image" content="https://tau-vailab.github.io/spic-e/webpage_assets/images/spice_sample2.png" />
+    <meta property="og:url" content="https://tau-vailab.github.io/Spice-E/" />
+    <meta property="og:image" content="https://tau-vailab.github.io/Spice-E/webpage_assets/images/spice_sample2.png" />
 
-    <meta property="article:publisher" content="https://tau-vailab.github.io/spic-e/" />
+    <meta property="article:publisher" content="https://tau-vailab.github.io/Spice-E/" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="SPiC&middot;E: Structural Priors in 3D Diffusion Models using Cross-Entity Attention" />
+    <meta name="twitter:title" content="Spice&middot;E: Structural Priors in 3D Diffusion using Cross-Entity Attention" />
     <meta name="twitter:description" content="" />
-    <meta name="twitter:url" content="https://tau-vailab.github.io/spic-e/" />
-    <meta name="twitter:image" content="https://tau-vailab.github.io/spic-e/webpage_assets/images/spice_sample2.png" />
+    <meta name="twitter:url" content="https://tau-vailab.github.io/Spice-E/" />
+    <meta name="twitter:image" content="https://tau-vailab.github.io/Spice-E/webpage_assets/images/spice_sample2.png" />
 
     <title>SPiC&middot;E: Structural Priors in 3D Diffusion Models using Cross-Entity Attention</title>
 <!--    <link rel="icon" href="../pics/wis_logo.jpg">-->
@@ -39,7 +39,8 @@
     <!-- title -->
     <h1 class="ourh1" align="center">Spice&middot;E <img class="inline-img" src=".\webpage_assets\images\chili.png" alt=""></h1>
     <h2 class="ourh2" align="center"><h2_r>S</h2_r>tructural <h2_r>P</h2_r>riors <h2_r>i</h2_r>n 3D Diffusion using <h2_r>C</h2_r>ross-<h2_r>E</h2_r>ntity Attention</h2>
-
+	<h5 class="conference" align="center">SIGGRAPH 2024 (Conference Proceedings)</h5>
+	
     <!-- authors and affiliations -->
     <section class="authors_block">
         <div class="authors" align="center">
@@ -376,10 +377,10 @@
             <h2 align="center">BibTeX</h2>
             <div class="code-container" align="left">
                 <code>
-                  @misc{sella2023spice, <br>
-                &emsp;   &emsp; title={SPiC-E: Structural Priors in 3D Diffusion Models using Cross-Entity Attention}, <br>
+                  @misc{sella2024spicee, <br>
+                &emsp;   &emsp; title={Spice-E : Structural Priors in 3D Diffusion using Cross-Entity Attention}, <br>
                 &emsp;   &emsp; author={Etai Sella and Gal Fiebelman and Noam Atia and Hadar Averbuch-Elor}, <br>
-                &emsp;   &emsp; year={2023}, <br>
+                &emsp;   &emsp; year={2024}, <br>
                 &emsp;   &emsp; eprint={2311.17834},<br>
                 &emsp;   &emsp; archivePrefix={arXiv},<br>
                 &emsp;   &emsp; primaryClass={cs.CV}<br>
@@ -390,16 +391,17 @@
         </div>
     </section>
 
-    <!-- Acknowledgements -->
-    <!-- <section class="ack-section" width="100%"> -->
-    <!--     <div class="ack-container"> -->
-    <!--         <hr> -->
-    <!--         <h2 align="center">Acknowledgements</h2> -->
-    <!--         <p> -->
-    <!--             We would like to acknowledge such and such for this and that. -->
-    <!--         </p> -->
-    <!--     </div> -->
-    <!-- </section> -->
+<!--    Acknowledgements -->
+    <section class="ack-section" width="100%"> 
+        <div class="ack-container">
+            <hr> 
+            <h2 align="center">Acknowledgements</h2> 
+            <p> 
+                We thank Peter Hedman, Ron Mokadi, Daniel Garibi, Itai Lang and Or Patashnik for helpful discussions. <br>
+				This work was supported by the Israel Science Foundation (grant no. 2510/23) and by the Alon Scholarship.
+            </p> 
+        </div> 
+    </section> 
 
   <p><br>
   </p>
