changing paper titleb

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:url" content="https://tau-vailab.github.io/Spice-E/" />
     <meta name="twitter:image" content="https://tau-vailab.github.io/Spice-E/webpage_assets/images/spice_sample2.png" />
 
-    <title>SPiC&middot;E: Structural Priors in 3D Diffusion Models using Cross-Entity Attention</title>
+    <title>Spice&middot;E: Structural Priors in 3D Diffusion using Cross-Entity Attention</title>
 <!--    <link rel="icon" href="../pics/wis_logo.jpg">-->
     <link rel="icon" href="./webpage_assets/images/chili.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
