--- a/index.html
+++ b/index.html
@@ -373,15 +373,13 @@
             <h2 align="center">BibTeX</h2>
             <div class="code-container" align="left">
                 <code>
-                  @misc{sella2024spicee, <br>
-                &emsp;   &emsp; title={Spice-E : Structural Priors in 3D Diffusion using Cross-Entity Attention}, <br>
-                &emsp;   &emsp; author={Etai Sella and Gal Fiebelman and Noam Atia and Hadar Averbuch-Elor}, <br>
-                &emsp;   &emsp; year={2024}, <br>
-                &emsp;   &emsp; eprint={2311.17834},<br>
-                &emsp;   &emsp; archivePrefix={arXiv},<br>
-                &emsp;   &emsp; primaryClass={cs.CV}<br>
-
-                  }
+			 @inproceedings{sella2024spice, <br>
+   		&emsp;   &emsp;	title={Spice{\textperiodcentered} E: Structural Priors in 3D Diffusion using Cross-Entity Attention}, <br>
+  		&emsp;   &emsp;	author={Sella, Etai and Fiebelman, Gal and Atia, Noam and Averbuch-Elor, Hadar}, <br>
+  		&emsp;   &emsp;	booktitle={ACM SIGGRAPH 2024 Conference Papers}, <br>
+  		&emsp;   &emsp;	pages={1--11}, <br>
+  		&emsp;   &emsp; year={2024} <br>
+		  }
                 </code>
             </div>
         </div>
